The short mode for Battery Resistor Circuit was too short.  It's fixed now.

--- a/battery-resistor-circuit/src/styles/variables.less
+++ b/battery-resistor-circuit/src/styles/variables.less
@@ -11,7 +11,7 @@
 @control-panel-width: 200px;
 
 @scene-height: 580px;
-@short-scene-height: 412px;
+@short-scene-height: 462px;
 @short-screen-panel-margin: 12px;
 
 @sim-controls-panel-width: 190px;
